--- a/EventDatabase/MainWindow.xaml
+++ b/EventDatabase/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:EventDatabase"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow" Height="350" Width="525" Icon="/EventDatabase;component/EventDatabase.ico">
     <Window.Resources>
         <DataTemplate x:Key="EditableComboBoxCellTemplate">
             <TextBlock Text="{Binding EventType}"/>
